--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,12 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
     kapt {
