--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name="com.jaiberyepes.mercadolibre.presentation.SplashActivity"
+            android:name="com.jaiberyepes.mercadolibre.presentation.ui.SplashActivity"
             android:theme="@style/AppTheme.Splash"
             android:exported="true">
             <intent-filter>
@@ -29,7 +29,7 @@
         </activity>
 
         <activity
-            android:name="com.jaiberyepes.mercadolibre.presentation.MainActivity"
+            android:name="com.jaiberyepes.mercadolibre.presentation.ui.MainActivity"
             android:theme="@style/AppTheme"
             android:exported="true">
         </activity>
